# voting-app

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE-APACHE-2.0  README.md  biome.json  devenv.nix  docker-compose.yml  flake.nix
.github/: CODEOWNERS
.nix-state/gcroots/: profiles
backend/: Cargo.nix  Cargo.toml  docker-compose.yml
backend/crates/: README.md
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: enums.rs  event.rs  lib.rs  mod.rs  organization.rs  organization_member.rs  prelude.rs  user.rs  vote.rs  voter.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20260308_183617_create_users.rs  m20260308_191852_create_organizations.rs  m20260308_211556_create_organization_members.rs  m20260309_205637_create_meetings.rs  m20260309_210931_create_meeting_roles.rs  m20260309_235225_create_attendances.rs  m20260310_000844_create_events.rs  m20260313_015106_create_voters.rs  m20260313_021648_create_voters.rs  m20260313_021648_create_votes.rs  m20260321_223131_create_votes.rs
backend/crates/voting-app/: Cargo.toml
backend/crates/voting-app-store/: Cargo.toml
backend/crates/voting-app-store/src/: events.rs  lib.rs  organization_members.rs  organizations.rs  users.rs  votes.rs
backend/crates/voting-app/fonts/: README.md
backend/crates/voting-app/src/: config.rs  main.rs  server.rs  static_event_reader.rs
backend/crates/voting-app/src/auth/: router.rs
backend/crates/voting-app/src/core/auth/: middleware.rs
backend/crates/voting-app/src/domain/: mod.rs
backend/crates/voting-app/src/domain/auth/: handlers.rs
backend/crates/voting-app/src/domain/votes/: handlers.rs  repository.rs
backend/crates/voting-app/src/event/: handler.rs  router.rs  types.rs
backend/crates/voting-app/src/handlers/: attendance.rs
backend/crates/voting-app/src/log/: handler.rs  mod.rs  state.rs
backend/crates/voting-app/src/organization/: handler.rs  router.rs
backend/crates/voting-app/src/vote/: handler.rs  router.rs
backend/src/: event_reader.rs  main.rs  static_event_reader.rs  test_event_data_cases.rs
backend/src/event/: handler.rs  mod.rs  types.rs
backend/src/log/: router.rs
backend/src/user/: handler.rs  router.rs  state.rs
backend/src/vote/: state.rs
docs/: CONTRIBUTING.md  SETUP.md
docs/crates/voting-app/: auth.md  fonts.md
docs/db/: db-json.md  db-migration.md  db-schema.md  migration.md
docs/frontend/: README.md
frontend/: bun.nix  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.d.ts
frontend/src/lib/components/: arrayEditor.svelte  hoverCard.svelte  longTextInput.svelte  popup.svelte  selectMenu.svelte  timeScroller.svelte
frontend/src/lib/models/: Event.ts  User.ts
frontend/src/screens/: authPage.svelte  createMotion.svelte  joinPage.svelte  resultsAdmin.svelte  resultsVoter.svelte  sessionCreation.svelte  voting.svelte  votingMotion.svelte  waitingPage.svelte  welcome.svelte
