[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
dotenvy = "0.15.7"
rand = "0.10.0"
sea-orm = "1.1.19"
sea-orm-migration = "1.1.19"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
