[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "../entity"}
migration = { version = "0.1.0", path = "../migration"}
rand = "0.10.0"
sea-orm = "2.0.0-rc.36"
sea-orm-migration = "2.0.0-rc.36"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
